tests/machine/x/pascal/group_by_left_join.error
line: 97
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/group_by_left_join.pas
group_by_left_join.pas(60,11) Error: Identifier not found "o"
group_by_left_join.pas(62,20) Error: Identifier not found "o"
group_by_left_join.pas(65,38) Error: Identifier not found "g"
group_by_left_join.pas(67,20) Error: Identifier not found "g"
group_by_left_join.pas(69,25) Error: Illegal qualifier
group_by_left_join.pas(67,20) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_left_join.pas(77,11) Error: Identifier not found "o"
group_by_left_join.pas(79,39) Error: Identifier not found "g"
group_by_left_join.pas(81,20) Error: Identifier not found "g"
group_by_left_join.pas(83,25) Error: Illegal qualifier
group_by_left_join.pas(81,20) Error: Cannot find an enumerator for the type "<erroneous type>"
group_by_left_join.pas(97) Fatal: There were 11 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

